fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ body {
   width: 30%;
   justify-content: center;
   align-items: center;
+  flex-flow: column;
   border-right: #666666 solid 1px;
 }
 
